# Bootcamp_WebScrape

./: .gitignore  README.md  prerequisites.md
data_acquisition/: .gitignore  samsung_phones_specs.csv  scrapy.cfg
data_acquisition/amazon_samsung/: .env.example  items.py  middlewares.py  pipelines.py  samsung_phones_specs.csv  settings.py
data_acquisition/amazon_samsung/spiders/: samsung_phones.py
data_bot/analytics_agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
data_bot/analytics_agent/nginx/: nginx.conf
data_bot/analytics_agent/notebooks/: analytics_agent_cli.ipynb  llm_and_tool_calling.ipynb  notes.txt  summary.txt
data_bot/analytics_agent/src/: main.py  main_cli.py  text_summarizer.py
data_bot/analytics_agent/src/analytics_agents/: standalone_text_to_sql_agent.py
data_bot/analytics_agent/src/analytics_agents/tools/: postgres_tool.py  tool.py  user_input.py
data_bot/analytics_agent/src/config/: __init__.py  dependencies.py  langfuse.py  settings.py
data_bot/analytics_agent/tests/: conftest.py
data_bot/analytics_agent/tests/agents/: test_standalone_text_to_sql_agent.py
data_bot/analytics_agent/tests/tools/: test_user_input_tool.py
data_bot/ui/: .env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
data_bot/ui/app/: layout.tsx  page.tsx  test.tsx
data_bot/ui/app/api/copilotkit/: route.ts
data_processing/: .env.example  etl.ipynb
data_processing/dataset/: brands.csv  cpu_models.csv  operating_systems.csv  phone_specs.csv  phones.csv
